force-app/main/default/objects/RateCategory__c/RateCategory__c.object-meta.xml
<CustomObject>
    <description>Oggetto utilizzato per calcolare la Rate category dell&apos;order</description>
    <label>RateCategory</label>
    <nameField>
        <label>RateCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RateCategory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>