force-app/main/default/objects/RateCategory__c/fields/CalculatedValue__c.field-meta.xml
<CustomField>
    <fullName>CalculatedValue__c</fullName>
    <label>CalculatedValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>