force-app/main/default/objects/RateCategory__c/fields/DistributorCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorCode__c</fullName>
    <label>DistributorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>