force-app/main/default/objects/RateCategory__c/fields/Fornitura__c.field-meta.xml
<CustomField>
    <fullName>Fornitura__c</fullName>
    <label>Fornitura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>