force-app/main/default/objects/RateCategory__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Mercato di Riferimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Market</valueSetName>
    </valueSet>
</CustomField>