force-app/main/default/objects/RateCategory__c/fields/operatore__c.field-meta.xml
<CustomField>
    <fullName>operatore__c</fullName>
    <label>operatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>